--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
